# waffle-

./: .gitignore  Cargo.toml  DEBUGGING.md  README.md
crates/waffle-backend/: Cargo.toml
crates/waffle-backend/src/: lib.rs
crates/waffle-backend/src/backend/: localify.rs  maxssa.rs  mod.rs  reducify.rs  stackify.rs  treeify.rs
crates/waffle-copying/: Cargo.toml
crates/waffle-copying-passes/: Cargo.toml
crates/waffle-copying-passes/src/: lib.rs  mapping.rs  tcore.rs
crates/waffle-copying/src/: copying.rs  lib.rs
crates/waffle-copying/src/copying/: fcopy.rs  fts.rs  kts.rs  module.rs
crates/waffle-entity/: Cargo.toml
crates/waffle-entity/src/: entities.rs  entity.rs  lib.rs  pool.rs
crates/waffle-frontend/: Cargo.toml
crates/waffle-frontend/src/: frontend.rs  lib.rs
crates/waffle-fuzzing/: Cargo.toml
crates/waffle-fuzzing/src/: fuzzing.rs  lib.rs
crates/waffle-hooking/: Cargo.toml
crates/waffle-hooking/src/: lib.rs
crates/waffle-ir/: Cargo.toml
crates/waffle-ir/src/: errors.rs  interp.rs  ir_mod.rs  ir_subtypes.rs  ir_types.rs  lib.rs  op_traits.rs  ops.rs  ops_rkyv.rs  ssa_traits_impls_02.rs  ssa_traits_impls_03.rs
crates/waffle-ir/src/cfg/: domtree.rs  mod.rs  postorder.rs
crates/waffle-ir/src/ir/: debug.rs  display.rs  func.rs  mod.rs  module.rs  value.rs
crates/waffle-lowering/: Cargo.toml
crates/waffle-lowering/src/: lib.rs  mem_fusing.rs  unmem.rs
crates/waffle-passes/: Cargo.toml
crates/waffle-passes-shared/: Cargo.toml
crates/waffle-passes-shared/src/: lib.rs  maxssa.rs  resolve_aliases.rs
crates/waffle-passes/src/: lib.rs  passes.rs
crates/waffle-passes/src/passes/: basic_opt.rs  dom_pass.rs  empty_blocks.rs  frint.rs  func_rocket.rs  importify.rs  inline.rs  mapping.rs  maxssa.rs  mem_fusing.rs  reorder_funs.rs  tcore.rs  ub_vaccum.rs  unmem.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: differential.rs  irreducible.rs  opt_diff.rs  parse_ir.rs  roundtrip.rs  roundtrip_roundtrip.rs
src/: copying.rs  entity.rs  errors.rs  frontend.rs  fuzzing.rs  hooking.rs  interp.rs  ir.rs  lib.rs  more.rs  op_traits.rs  ops.rs  passes.rs  pool.rs  scoped_map.rs  ssa_traits_impls.rs  ssa_traits_impls_02.rs  ssa_traits_impls_03.rs  td.rs  util.rs
src/backend/: localify.rs  mod.rs  reducify.rs  stackify.rs  treeify.rs
src/cfg/: domtree.rs  mod.rs  postorder.rs
src/copying/: block.rs  fcopy.rs  fts.rs  func.rs  kts.rs  module.rs
src/interp/: wasi.rs
src/ir/: debug.rs  display.rs  func.rs  module.rs  value.rs
src/passes/: basic_opt.rs  dom_pass.rs  empty_blocks.rs  flattening.rs  frint.rs  importify.rs  inline.rs  mapping.rs  maxssa.rs  mem_fusing.rs  quinify.rs  reorder_funs.rs  resolve_aliases.rs  splice.rs  tcore.rs  ub_vaccum.rs  unmem.rs  unswitch.rs
tests/: roundtrip.rs
tests/roundtrip/: multi-value-call.wat
wasm_tests/: typed-funcref.wat
