[workspace]
members = [
    ".",
    "crates/waffle-entity",
    "crates/waffle-ir",
    "crates/waffle-frontend",
    "crates/waffle-backend",
    "crates/waffle-passes-shared",
    "crates/waffle-passes",
    "crates/waffle-copying",
    "crates/waffle-hooking",
    "crates/waffle-fuzzing",
]
resolver = "2"

[workspace.package]
version = "0.6.0-alpha.1"
description = "Wasm Analysis Framework For Lightweight Experiments"
authors = ["Chris Fallin <chris@cfallin.org>","gkgoat"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2018"
repository = "https://github.com/portal-co/waffle-"

[workspace.dependencies]
wasmparser = { version = "^0.241", default-features = false, features = ["simd"] }
wasm-encoder = { version = "^0.241", default-features = false }
anyhow = { version = "^1.0", default-features = false }

log = { version = "0.4", default-features = false }


smallvec = { version = "1.13", default-features = false }





# For fuzzing only. Versions must match those in fuzz/Cargo.toml.
libfuzzer-sys = { version = "0.4" }
indexmap = { version = "2.2.2", default-features = false }
stacker = { version = "0.1.15" }
wasm-smith = { version = "0.202" }
paste = "1.0.15"
serde = { version = "1.0.204", features = ["derive"] }


either = { version = "1.13.0", features = ["serde"], default-features = false }
arena-traits = "^0.2.3"
ssa-traits = {version="^0.2.3",git="https://github.com/portal-co/codegen-utils.git",branch="master"}
cfg-traits = {version="^0.2.3",git="https://github.com/portal-co/codegen-utils.git",branch="master"}

cfg-traits-03 = {version="0.3.0-alpha.2",package="cfg-traits",git="https://github.com/portal-co/codegen-utils.git",branch="dev/0.3"}
ssa-traits-03 = {version="0.3.0-alpha.2",package="ssa-traits",git="https://github.com/portal-co/codegen-utils.git",branch="dev/0.3"}
lending-iterator = "0.1.7"
hashbrown = { version = "0.15.2", default-features = false, features = ["alloc", "default-hasher", "equivalent", "serde"] }
impl-trait-for-tuples = "0.2.3"
sha3 = { version = "0.10.8", default-features = false }

# Internal workspace crates
waffle-entity = { path = "crates/waffle-entity",package = "portal-pc-waffle-entity", version = "0.6.0-alpha.1" }
waffle-ir = { path = "crates/waffle-ir",package = "portal-pc-waffle-ir", version = "0.6.0-alpha.1" }
waffle-frontend = { path = "crates/waffle-frontend",package = "portal-pc-waffle-frontend", version = "0.6.0-alpha.1" }
waffle-backend = { path = "crates/waffle-backend",package = "portal-pc-waffle-backend", version = "0.6.0-alpha.1" }
waffle-passes-shared = { path = "crates/waffle-passes-shared",package = "portal-pc-waffle-passes-shared", version = "0.6.0-alpha.1" }
waffle-passes = { path = "crates/waffle-passes",package = "portal-pc-waffle-passes", version = "0.6.0-alpha.1" }
waffle-copying = { path = "crates/waffle-copying",package = "portal-pc-waffle-copying", version = "0.6.0-alpha.1" }
waffle-hooking = { path = "crates/waffle-hooking",package = "portal-pc-waffle-hooking", version = "0.6.0-alpha.1" }
waffle-fuzzing = { path = "crates/waffle-fuzzing",package = "portal-pc-waffle-fuzzing", version = "0.6.0-alpha.1" }

[package]
name = "portal-pc-waffle"
version.workspace = true 
description.workspace = true 
authors.workspace = true 
license.workspace = true 
edition.workspace = true 
repository.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true
waffle-frontend .workspace = true
waffle-backend .workspace = true
waffle-passes .workspace = true
waffle-copying = {workspace = true, optional = true}
waffle-hooking = {workspace = true, optional = true}
waffle-fuzzing = {workspace = true, optional = true}

wasmparser .workspace = true 
wasm-encoder .workspace = true 
log .workspace = true 

ssa-traits ={workspace = true,optional=true} 
cfg-traits ={workspace = true,optional=true} 
cfg-traits-03 ={workspace = true,optional=true} 
ssa-traits-03 ={workspace = true,optional=true} 

[dev-dependencies]
wat = "1.212.0"
env_logger = "0.11"
structopt = "0.3.26"

[features]
default = []
fuzzing = ["waffle-fuzzing"]
stacker = []
ssa-traits-02 = ["dep:ssa-traits","dep:cfg-traits", "waffle-ir/ssa-traits-02"]
ssa-traits-03 = ["dep:ssa-traits-03","dep:cfg-traits-03", "waffle-ir/ssa-traits-03"]
copying = ["waffle-copying"]
tcore = ["waffle-passes/tcore"]
exceptions = []
hooking = ["waffle-hooking"]
importify = ["waffle-passes/importify"]
