[package]
name = "portal-pc-waffle-backend"
version.workspace = true
description = "Backend (IR to Wasm) for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true
waffle-passes-shared .workspace = true
wasmparser .workspace = true
wasm-encoder .workspace = true
anyhow .workspace = true
log .workspace = true
smallvec .workspace = true
hashbrown .workspace = true

[features]
default = []

[dev-dependencies]
wat = "1.212.0"
env_logger = "0.11"
structopt = "0.3.26"