[package]
name = "portal-pc-waffle-copying-passes"
version.workspace = true
description = "Optimization passes for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true
waffle-passes-shared .workspace = true
waffle-copying.workspace = true
waffle-passes.workspace = true
anyhow .workspace = true
log .workspace = true
smallvec .workspace = true
hashbrown .workspace = true
sha3 .workspace = true

[features]
unstable-exceptions=["waffle-ir/unstable-exceptions","waffle-passes-shared/unstable-exceptions","waffle-copying/unstable-exceptions","waffle-passes/unstable-exceptions"]