[package]
name = "waffle-copying"
version.workspace = true
description = "Copying module functionality for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true
anyhow .workspace = true
log .workspace = true
hashbrown .workspace = true
paste.workspace = true
waffle-passes-shared .workspace = true

[features]
default = []

[dev-dependencies]
wat = "1.212.0"
env_logger = "0.11"
structopt = "0.3.26"