[package]
name = "portal-pc-waffle-entity"
version.workspace = true
description = "Entity types for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
arena-traits .workspace = true
serde .workspace = true

[features]
default = []
