[package]
name = "portal-pc-waffle-frontend"
version.workspace = true
description = "Frontend (Wasm to IR) for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir = {workspace = true, features = ["frontend"]}
wasmparser .workspace = true
wasm-encoder .workspace = true
anyhow .workspace = true
log .workspace = true
hashbrown .workspace = true

[features]
default = []
backend = ['waffle-ir/backend']
unstable-exceptions=["waffle-ir/unstable-exceptions"]
unstable-debugging=["waffle-ir/unstable-debugging"]