[package]
name = "portal-pc-waffle-fuzzing"
version.workspace = true
description = "Fuzzing utilities for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true
libfuzzer-sys .workspace = true
wasmparser .workspace = true
wasm-smith .workspace = true

[features]
default = []
unstable-exceptions=["waffle-ir/unstable-exceptions"]