[package]
name = "portal-pc-waffle-hooking"
version.workspace = true
description = "Hooking functionality for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true

[features]
default = []
