[package]
name = "waffle-passes"
version.workspace = true
description = "Optimization passes for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true
waffle-passes-shared .workspace = true
anyhow .workspace = true
log .workspace = true
smallvec .workspace = true
hashbrown .workspace = true
sha3 .workspace = true

[features]
default = []
tcore = []
importify = []
