[package]
name = "waffle-passes"
version.workspace = true
description = "Optimization passes for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true
waffle-passes-shared .workspace = true
waffle-copying = {workspace = true,optional = true}
anyhow .workspace = true
log .workspace = true
smallvec .workspace = true
hashbrown .workspace = true
sha3 .workspace = true

[features]
default = []
tcore = ["copying"]
importify = []
copying = ["dep:waffle-copying"]

[dev-dependencies]
wat = "1.212.0"
env_logger = "0.11"
structopt = "0.3.26"