[package]
name = "portal-pc-waffle-passes"
version.workspace = true
description = "Optimization passes for the WAFFLE Wasm analysis framework"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
waffle-entity .workspace = true
waffle-ir .workspace = true
waffle-passes-shared .workspace = true
anyhow .workspace = true
log .workspace = true
smallvec .workspace = true
hashbrown .workspace = true
sha3 .workspace = true
rkyv = { workspace = true, optional = true }

[features]
default = []
importify = []
unstable-exceptions=["waffle-ir/unstable-exceptions","waffle-passes-shared/unstable-exceptions"]
unstable-debugging=["waffle-ir/unstable-debugging","waffle-passes-shared/unstable-debugging"]
rkyv-impl = ["dep:rkyv", "waffle-ir/rkyv-impl", "waffle-passes-shared/rkyv-impl"]

[dev-dependencies]
wat = "1.212.0"
env_logger = "0.11"
structopt = "0.3.26"